<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="8dp"
    android:paddingRight="8dp">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8sp"
        android:text="@string/item_title"
        android:textColor="@color/BLACK"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/pubDateTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32sp"
        android:text="@string/data" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginBottom="32sp"
        android:contentDescription="@string/automoto"
        app:srcCompat="@drawable/logoautomoto" />

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32sp"
        android:text="@string/descrizione"
        android:textColor="@color/BLACK"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/per_maggiori_informazioni_clicca_sul_link" />

    <TextView
        android:id="@+id/linkTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:text="@string/link"
        android:textColor="@color/DARK_GREEN"
        android:textSize="14sp" />

</LinearLayout>
