<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16sp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8sp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/attenzione"
            app:srcCompat="@mipmap/ic_atte" />

        <TextView
            android:id="@+id/avviso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/assicurati_di_essere_nelle_prossimit_della_colonnina"
            android:textColor="@color/RED" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8sp"
        android:text="@string/seleziona_la_marca_della_colonnina" />

    <Spinner
        android:id="@+id/marche"
        android:layout_width="match_parent"
        android:layout_height="60dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8sp"
        android:layout_marginBottom="8sp"
        android:text="@string/seleziona_il_numero_di_posti_presenti" />

    <Spinner
        android:id="@+id/n_posti"
        android:layout_width="match_parent"
        android:layout_height="60dp" />
</LinearLayout>