<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapsFragment">

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:id="@+id/rellayoyt1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/white_border">

        <ImageView

            android:id="@+id/lente"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/lente"
            app:srcCompat="@drawable/ic_search" />

        <EditText
            app:backgroundTint="@color/DARK_GREEN"
            android:id="@+id/ricerca"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/lente"
            android:layout_toRightOf="@+id/lente"
            android:hint="@string/ricerca_citt"
            android:imeOptions="actionSearch"
            android:importantForAutofill="no"
            android:inputType="textNoSuggestions"
            android:textColor="#000"
            android:textSize="16sp"
            tools:targetApi="o" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/gps"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/rellayoyt1"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:contentDescription="@string/gps"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_gps" />

</RelativeLayout>