<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ProfileActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="32dp"
                android:paddingBottom="32dp">

                <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/profilepic"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    app:civ_border_color="@color/GREEN"
                    app:civ_border_width="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.496"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0"
                    app:srcCompat="@mipmap/e_station_logo" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/modifica"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    app:backgroundTint="@color/GREEN"
                    app:layout_constraintBottom_toBottomOf="@+id/profilepic"
                    app:layout_constraintEnd_toEndOf="@+id/profilepic"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@+id/profilepic"
                    app:layout_constraintTop_toTopOf="@+id/profilepic"
                    app:layout_constraintVertical_bias="1.0"
                    app:srcCompat="@drawable/ic_photo_camera_24dp" />

                <ProgressBar

                    android:id="@+id/progressbar"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@+id/profilepic"
                    app:layout_constraintEnd_toEndOf="@+id/profilepic"
                    app:layout_constraintStart_toStartOf="@+id/profilepic"
                    app:layout_constraintTop_toTopOf="@+id/profilepic" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginBottom="32dp"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/e_mail"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:contentDescription="@string/descrizione"
                        android:padding="2dp"
                        app:srcCompat="@drawable/ic_email_green_24dp" />

                    <TextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:paddingStart="16dp"
                        android:paddingLeft="16dp"
                        android:paddingEnd="0dp"
                        android:paddingRight="0dp"
                        android:text="@string/email"
                        android:textSize="18sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginBottom="32dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/us"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:contentDescription="@string/descrizione"
                        android:padding="2dp"
                        app:srcCompat="@drawable/ic_person_green_24dp" />

                    <TextView
                        android:id="@+id/us"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:paddingStart="16dp"
                        android:paddingLeft="16dp"
                        android:paddingEnd="0dp"
                        android:paddingRight="0dp"
                        android:text="@string/username"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/reset_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginBottom="24dp"
                android:backgroundTint="@color/GREEN"
                android:text="@string/reset_password"
                android:textColor="@color/WHITE_SMOKE"
                android:textStyle="bold"
                tools:targetApi="lollipop" />

            <Button
                android:id="@+id/delete_acc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:backgroundTint="@color/GREEN"
                android:text="@string/elimina_account"
                android:textColor="@color/WHITE_SMOKE"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:targetApi="lollipop" />

        </LinearLayout>
    </ScrollView>